fix container alignment,fix max value check

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,13 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+@media (min-width: 992px) {
+  body {
+    flex-direction: row;
+  }
 }
 
 header {
